# omt-encoder

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  build_and_install_service.sh  run_tests.sh  update.sh
LCD-show/: LCD35-show
libomtnet/: PROTOCOL.md  README.md  libomtnet.csproj  libomtnet.sln
libomtnet/src/: OMTAddress.cs  OMTBase.cs  OMTBinary.cs  OMTBuffer.cs  OMTChannel.cs  OMTClock.cs  OMTConstants.cs  OMTDiscovery.cs  OMTFrame.cs  OMTSend.cs  (+17 more)
libvmx-sys/: build.rs
omtcapture/: AudioPipeline.cs  Cargo.toml  DeviceProbe.cs  JsonContext.cs  PreviewPipeline.cs  Program.cs  README.md  SendCoordinator.cs  Settings.cs  VideoPipeline.cs  WebServer.cs  config.json  config.xml  omtcapture.csproj  omtcapture.service  omtcapture.sln
omtcapture/capture/: CaptureDevice.cs  CaptureFormat.cs  CaptureFrame.cs
omtcapture/src/: audio_pipeline.rs  discovery.rs  index.html  main.rs  send_coordinator.rs  settings.rs  timebase.rs  video_pipeline.rs  web_server.rs
omtcapture/v4l2/: V4L2Capture.cs  v4l2.cs
omtencoder/: Cargo.toml  omtencoder.service
rust_port/: build_and_install_service.sh  build_log.txt  compile_log.txt  compile_log_2.txt  run_tests.sh
rust_port/libomtnet/: Cargo.toml
rust_port/libomtnet/src/: channel.rs  client.rs  codec.rs  constants.rs  enums.rs  frame.rs  lib.rs  server.rs
rust_port/omtcapture/: Cargo.toml  config.json  install_service.sh  omtcapture-rs.service
rust_port/omtcapture/src/: audio_pipeline.rs  discovery.rs  index.html  main.rs  send_coordinator.rs  settings.rs  timebase.rs  video_pipeline.rs  web_server.rs
(+33 files in other folders)
