[package]
name = "omtcapture"
version = "0.1.0"
edition = "2021"

[dependencies]
libomtnet = { path = "../libomtnet" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"
log = "0.4"
env_logger = "0.10"
bytes = "1.11.1"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"
nix = { version = "0.26", features = ["fs"] }
v4l = "0.14"
libvmx-sys = { path = "../libvmx-sys" }
