[package]
name = "libomtnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
log = "0.4"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
libc = "0.2"
socket2 = "0.5"
