[package]
name = "omtcapture"
version = "0.1.0"
edition = "2021"

[dependencies]
libomtnet = { path = "../libomtnet" }
libvmx-sys = { path = "../libvmx-sys" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
bytes = "1.11.1"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"
v4l = "0.14"
